--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "dependencies": {
       "angular": "~1.3.6",
       "angular-route": "~1.3.0",
-      "angular-resource": "1.3.7-build.3694+sha.d162f15"
+      "angular-resource": "1.3.7-build.3694+sha.d162f15",
+      "angular-ui-router": "0.2.13"
       // "three.js"    : "https://raw.github.com/mrdoob/three.js/master/build/three.js"
     }
   }
